examples/example_054/example_054.v
Require Import Top.Prop.
Fail Check n.
